--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <h1>Hello Semua, Saya sedang belajar Git</h1>
+        <h2>Hallo saya tidak mudeng</h2>
     </body>
 </html>
